--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -14,7 +14,7 @@
 % Load special font packages here if you wish
 
 \include{preamble}
-\includeonly{ramanoptics}
+%\includeonly{ramanoptics}
 \makeatother
 %\tikzexternalize
 \begin{document}
