--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,7 @@
 \usepackage{booktabs}
 \usepackage{mathabx}
 \usepackage{anyfontsize}
+\usepackage{rotating}
 \setmainmatterspacing{double}
 %%% Useful Commands %%%
 
